# EverOS-Hermes

./: .gitignore  EverOS-Hermes_Cloud_升级清单.md  README.md  pyproject.toml  升级note.md  升级规划.md  升级规划2.md  评估报告.md
.github/workflows/: ci.yml
docs/: everos_cloud_v1_contract.md
integrations/hermes/: README.md  __init__.py  plugin.yaml
integrations/hermes/resources/skills/everos-memory-curation/: SKILL.md
integrations/hermes/resources/skills/everos-memory-curation/references/: agent-case-visibility.md  everos-hermes-official-api-gap-audit.md  memory-routing-policy.md  plugin-triage-and-migration.md
rust-version/: .gitignore  Cargo.toml  README.md
rust-version/integrations/hermes/: __init__.py  plugin.yaml
rust-version/integrations/hermes/resources/skills/everos-memory-curation/: SKILL.md
rust-version/integrations/hermes/resources/skills/everos-memory-curation/references/: agent-visibility-contract-audits.md  cleanup-and-verification.md  everos-hermes-official-api-gap-audit.md  everos-profile-compaction-limits.md  memory-routing-policy.md  user-intent-runbooks.md  user-profile-agent-memory-routing.md
rust-version/scripts/: package-release.sh
rust-version/src/: agent_visibility.rs  cli.rs  client.rs  context_assembler.rs  env.rs  flush_retry.rs  formatting.rs  lib.rs  main.rs  mcp.rs  mcp_dispatch.rs  mcp_tools.rs  policy.rs  provider.rs  provider_config.rs  provider_tools.rs  redaction.rs  response_normalization.rs  trajectory.rs  workflows.rs
rust-version/tests/: parity.rs  parity_mcp_frame.rs  parity_redaction.rs
rust-version/tests/parity/: client_core.rs  contracts_settings.rs  edge_contracts.rs  import_verify.rs  provider_lifecycle.rs  provider_mcp_tools.rs  schemas_config.rs  stdio_cli_contracts.rs
scripts/: everos_agent_visibility_smoke.py  everos_real_cloud_smoke.py
skills/software-development/everos-memory-curation/: SKILL.md
skills/software-development/everos-memory-curation/references/: user-profile-agent-memory-routing.md
src/everos_hermes/: __init__.py  agent_visibility.py  client.py  context_assembler.py  env.py  flush_retry.py  formatting.py  mcp_server.py  policy.py  provider.py  provider_config.py  provider_schemas.py  redaction.py  response_normalization.py  schemas.py  tool_payloads.py  trajectory.py  workflows.py
tests/: test_agent_visibility.py  test_cloud_contract.py  test_context_assembler.py  test_everos_client.py  test_everos_mcp_server.py  test_everos_provider.py  test_formatting.py  test_hermes_plugin_contract.py  test_hermes_release_package.py  test_payload_helpers.py  test_policy.py  test_provider_context_engine.py  test_response_normalization.py  test_schema_snapshots.py  test_schemas.py  test_trajectory.py  test_upgrade_contract.py  test_workflows.py
tests/contracts/: client_param_normalization_cases.json  http_response_envelope_cases.json  mcp_tools.snapshot.json  provider_config_contract.json  provider_tools.snapshot.json  response_normalization_cases.json  settings_validation_cases.json
