[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "everos-hermes"
version = "0.3.0"
description = "EverOS Cloud memory provider/plugin for Hermes Agent with MCP compatibility"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "PyYAML>=6",
]

[project.scripts]
everos-mcp = "everos_hermes.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.data-files]
"share/everos-hermes/integrations/hermes" = [
  "integrations/hermes/__init__.py",
  "integrations/hermes/plugin.yaml",
  "integrations/hermes/README.md",
]
"share/everos-hermes/integrations/hermes/resources/skills/everos-memory-curation" = [
  "integrations/hermes/resources/skills/everos-memory-curation/SKILL.md",
]
"share/everos-hermes/integrations/hermes/resources/skills/everos-memory-curation/references" = [
  "integrations/hermes/resources/skills/everos-memory-curation/references/agent-case-visibility.md",
  "integrations/hermes/resources/skills/everos-memory-curation/references/agent-visibility-contract-audits.md",
  "integrations/hermes/resources/skills/everos-memory-curation/references/cleanup-and-verification.md",
  "integrations/hermes/resources/skills/everos-memory-curation/references/everos-hermes-official-api-gap-audit.md",
  "integrations/hermes/resources/skills/everos-memory-curation/references/everos-profile-compaction-limits.md",
  "integrations/hermes/resources/skills/everos-memory-curation/references/memory-routing-policy.md",
  "integrations/hermes/resources/skills/everos-memory-curation/references/plugin-triage-and-migration.md",
  "integrations/hermes/resources/skills/everos-memory-curation/references/user-intent-runbooks.md",
  "integrations/hermes/resources/skills/everos-memory-curation/references/user-profile-agent-memory-routing.md",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "everos_hermes.provider",
  "everos_hermes.mcp_server",
]
ignore_errors = true
