[package]
name = "everos-hermes-rust"
version = "0.2.0"
edition = "2024"
description = "Rust EverOS MCP server and Hermes memory provider core"
license = "MIT"

[lib]
name = "everos_hermes_rust"
path = "src/lib.rs"

[[bin]]
name = "everos-hermes-rust"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
